admin/client/src/components/FormAction/FormAction.scss
// TODO Separate out bootstrap btn reset styles to a separate style sheet or divide within this sheet
// TODO Rename component to something like Btn or Button?

// General buttons
.btn {
  height: 32px;
  margin-right: $spacer-x * .75; // 12px
  position: relative;
}

// Button icons
.btn[class*="font-icon-"]::before {
  font-size: 16px;
  position: relative;
  top: 3px;
  margin-right: 6px;
  line-height: 13px;
}

// Gives button a larger icon
.btn--icon-large {
  font-size: 20px;
  line-height: 20px;
}


// For buttons with icon and no text, removes space after icon
// TODO replace all .no-text classes for .btn--no-text
.btn--no-text[class*="font-icon-"]::before,
.no-text[class*="font-icon-"]::before {
  margin-right: 0;
}


// SVG loading icon
.btn__loading-icon {
  float: left;
  margin: 0 4px 0 0;
  height: 20px;
  position: absolute;
  left: 50%;
  top: $btn-padding-y;
  transform: translate(-50%);

  svg {
    width: 24px;
    height: 20px;
  }

  circle {
    width: 4px;
    height: 5px;
    animation: loading-icon 1.2s infinite ease-in-out both;
    fill: $gray;
    transform-origin: 50% 50%;
  }

  circle:nth-child(1) {
    animation-delay: -.32s;
  }

  circle:nth-child(2) {
    animation-delay: -.16s;
  }
}

.btn--loading > span,
.btn--loading::before {
  visibility: hidden;
}

@keyframes loading-icon {
  0%, 80%, 100% {
    transform: scale(0);
  }

  40% {
    transform: scale(1);
  }
}


// Specific button variations
.btn-primary {
  border-bottom-color: $btn-primary-shadow;

  svg circle {
    fill: $white;
  }
}

.btn-primary-outline {
  border-color: lighten($btn-primary-border, 10%);

  &:hover,
  &:active,
  &:focus {
    color: darken($btn-primary-bg, 10%);
    background-image: none;
    background-color: lighten($btn-primary-bg, 50%);
    border-color: $btn-primary-border;
  }

  svg circle {
    fill: $btn-primary-bg;
  }
}


.btn-secondary {
  border-color: transparent;
  background-color: transparent;

  &:hover,
  &:active,
  &:focus,
  &:active:hover,
  &:active:focus {
    background-color: $gray-lighter;
    border-color: transparent;
  }
}

.btn-secondary-outline {
  color: $btn-secondary-color;

  &:hover,
  &:focus,
  &:active,
  &:active:focus,
  &:active:hover {
    background-color: $gray-lighter;
    color: $btn-secondary-color;
  }

  svg circle {
    fill: $body-color;
  }
}


// Grouped buttons
.btn-group {
  margin-right: $spacer-x * .75; // 12px

  .btn {
    margin-right: 0;
  }

  .btn-primary {
    border-left: 1px solid $btn-primary-shadow;

    &:first-child {
      border-left: 0;
    }
  }
}

